add background color, increase body size, improve buttons name and style

--- a/extension/index.html
+++ b/extension/index.html
@@ -12,10 +12,11 @@
         }
 
         body {
-            width: 150px;
+            width: 250px;
             height: 150px;
             --light-grey: #646464;
             font-family: system-ui;
+            background: #fff5ee;
         }
     </style>
 </head>
