--- a/extension/index.html
+++ b/extension/index.html
@@ -13,7 +13,7 @@
 
         body {
             width: 250px;
-            height: 150px;
+            min-height: 150px;
             --light-grey: #646464;
             font-family: system-ui;
             background: #fff5ee;
